--- a/LibraryManagementSystem/css/style.css
+++ b/LibraryManagementSystem/css/style.css
@@ -1,4 +1,4 @@
-* {
+ * {
 	margin: 0px;
 	padding: 0px;
 }
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-	width: 35%;
+	width: 55%;
 	margin: 50px auto 0px;
 	color: white;
 	background: #5f9ea0;
@@ -25,11 +25,24 @@ body {
 	font-size: 18px;
 
 }
-
-
-form {
+/*
+.form .container{
 	width: 35%;
 	margin: 0px auto;
+	position: fixed;
+	margin-top: 50px;
+	background: white;
+	left: 400px;
+	border: 1px solid #b0c4de;
+	border-radius: 0px 0px 10px 10px;
+	padding: 20px;	
+}
+*/
+form {
+	position: absolute;
+	left: 400px; 
+	width: 35%;
+	margin: 50px auto;
 	background: white;
 	border: 1px solid #b0c4de;
 	border-radius: 0px 0px 10px 10px;
@@ -63,6 +76,11 @@ form {
 	border: none;
 	font-size: 18px;
 	cursor: pointer;
+}
+
+.main-footer{
+	position: absolute;
+	bottom: -250px;
 }
 
 
