--- a/LibraryManagementSystem/css/style.css
+++ b/LibraryManagementSystem/css/style.css
@@ -9,15 +9,15 @@ body {
 }
 
 .header {
-	width: 55%;
-	margin: 50px auto 0px;
+	width: 30%;
+	margin: 10px auto 30px;
 	color: white;
 	background: #5f9ea0;
 	text-align: center;
 	border: 1px solid #b0c4de;
 	border-bottom: none;
-	border-radius: 10px 10px 0px 0px;
-	padding: 20px;
+	border-radius: 20px 20px 20px 20px;
+	padding: 12px;
 }
 
 .para {
@@ -45,7 +45,7 @@ form {
 	margin: 50px auto;
 	background: white;
 	border: 1px solid #b0c4de;
-	border-radius: 0px 0px 10px 10px;
+	border-radius: 10px 10px 10px 10px;
 	padding: 20px;	
 }
 
@@ -110,12 +110,11 @@ form {
 /*terms and privacy header*/
 .tpheader {
 	width: 30%;
-	margin: 10px auto 30px;
-	color: white;
-	background: #5f9ea0;
+	margin: 25px auto 20px;
+	color: black;
+	background: white;
 	text-align: center;
 	text-orientation: center;
-	border: 2px solid #b0c4de;
 	border-bottom: none;
 	border-radius: 10px 10px 10px 10px;
 	padding: 0px;
